Added proper handling of messy pages attribute

--- a/tests/Fixures/publications.bib
+++ b/tests/Fixures/publications.bib
@@ -23,7 +23,7 @@ two lines},
   booktitle = {8. ITG-Fachtagung H\"orrundfunk}
   year = {1988},
   month = nov
-  pages =    252    - 256
+  pages = "Page   252"
   abstract = {Some Abstract across
 two lines     with excessive
 whitespace and a missing termination bracket
